--- a/ii-Concepts/04-Variables/display.yml
+++ b/ii-Concepts/04-Variables/display.yml
@@ -22,8 +22,8 @@
     - ext_variables.yml
 
   #vars_prompt: # this will prompt for the input
-    - name: servicename
-      private: false
+   # - name: servicename
+    #  private: false
 
   
   tasks:
