--- a/ii-Concepts/04-Variables/display1.yml
+++ b/ii-Concepts/04-Variables/display1.yml
@@ -4,7 +4,7 @@
   gather_facts: true # this will make not to gather facts before running tasks
 
    vars_files:
-    - ext_variables.1.yml
+    - ext_variables1.yml
 
    - name: display variables from external files
       debug:
